2020-01-14  Larus  <larus@Jim-Macbook-Air>

	* Release 9.1.21
	
	* Update copyrights.

	* Simplify MacOS packaging by moving file update to shell script
	from Packages specification.

	* Cleanup QMake process a bit.

2020-01-13  Larus  <larus@Jim-Macbook-Air>

	* QtSpim/QtSpim.pro:
	Delete unused statements.

2019-11-03  Larus  <larus@Jim-Macbook-Air>

	* CPU/inst.cpp (inst_decode) [jashank.jeremy@unsw.edu.au]:
	Miss second highest order bit in j instruction due to bad mask.

2019-04-13  Larus  <larus@Jim-Macbook-Air>

	* Documentation/H_P_AppendixA/HP_AppA.html [https://sourceforge.net/p/spimsimulator/bugs/88:
	Formatting problems in typos in mflo, mfhi.

2018-11-23  Larus  <larus@Jim-Macbook-Air>

	* README (https):
	Fix URLs for sourceforge.

2018-11-09  Larus  <larus@Jim-Macbook-Air>

	* Documentation/H_P_AppendixA/HP_AppA.html [https://sourceforge.net/p/spimsimulator/bugs/86/]:
	Opcode for swc1 was documented incorrectly as 0x31 instead of 0x39.

2018-09-16  Larus  <larus@Jim-Macbook-Air>

	* spim/Makefile, xspim/Makefile
	[https://sourceforge.net/p/spimsimulator/patches/6]:
	Improvements to Makefiles

2017-08-29  Larus  <larus@Jim-Macbook-Air>

	* CPU/version.h (SPIM_VERSION):
	Release 9.1.20

	* spimview.ui [https://sourceforge.net/p/spimsimulator/bugs/81]:
	Typo "parmeter"

	* state.cpp [https://sourceforge.net/p/spimsimulator/bugs/81]:
	Add message warning QtSpim will exit to restore window state.


2017-07-28    <larus@IC-LMC-ICDO-01>

	* Setup/QtSpim_Win_Deployment:
	Delete VisualStudio projects (InstallShield no longer works) and
	move to WiX to build installer.

	* QtSpim/menu.cpp (help_ViewHelp):
	Use full path for help file on Windows so QtSpim can run anywhere.

2017-07-25  Larus  <larus@Jim-Macbook-Air>

        * CPU/version.h (SPIM_VERSION):
        Release 9.1.19

2017-06-09  Larus  <larus@Jim-Macbook-Air>

        * QtSpim/main.cpp (main):
        Explicitly specify organization name and url to work around